--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cn-fontsource-source-han-serif-sc-vf-regular/font.css"></link>
+    <style>
+    html{
+        font-family: Roboto, "Source Han Serif SC VF", sans-serif;
+    }
+    </style>
     <title>Document</title>
 </head>
 <body>
     <div id="search-bar">
         <h1>IMDb</h1>
         <form id="search-form">
-            <input type="text" id="search-input" placeholder="search your movies">
+            <input type="text" id="search-input" placeholder="搜索影片">
         </form>
     </div>
     <div>
-        <h1 id="category-title">Now Playing Movies</h1>
+        <h1 id="category-title">热映推荐</h1>
     </div>
     <div id="movies-grid"></div>
     <script src="script.js"></script>
