--- a/index.html
+++ b/index.html
@@ -29,7 +29,22 @@
             </form>
         </div>
     </header>
-
+    <div class="slideShow">
+        <div class="slides">
+            <img src="assets/1.jpg" alt="">
+            <img src="assets/2.jpg" alt="">
+            <img src="assets/3.jpg" alt="">
+            <img src="assets/4.jpg" alt="">
+        </div>
+        <div class="btn">
+            <span class="active"></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <a href="javascript:void(0);">&lt;</a>
+        <a href="javascript:void(0);">&gt;</a>
+    </div>
     <div class="content">
         <div>
             <h1 id="category-title">热映推荐</h1>
